package com.swapna.foodapp.utils

object LoginTestTags {
    const val SCREEN_ROOT = "login_screen"
    const val LOGO = "login_logo"
    const val TITLE = "login_title"
    const val SUBTITLE = "login_subtitle"
    const val PHONE_FIELD = "phone_field"
    const val OTP_FIELD = "otp_field"
    const val AUTH_BUTTON = "auth_button"
    const val RESEND_BUTTON = "resend_button"
    const val SUCCESS_CARD = "success_card"
    const val LOADING_INDICATOR = "loading_indicator"
    const val PHONE_ERROR_CARD = "phone_error_card"
    const val OTP_ERROR_CARD = "otp_error_card"
    const val ERROR_CARD = "phone_error_card"
}